fixed z-index of the back button

--- a/packages/navigate-theme/src/styles/components/_booking-form.scss
+++ b/packages/navigate-theme/src/styles/components/_booking-form.scss
@@ -90,7 +90,6 @@
     height: 4.2rem;
     color: #06babf;
     position: absolute;
-    z-index: 10000;
     top: 0;
     background: white;
     position: relative;
